--- a/example/ts_rigid/rbdAdapter.yaml
+++ b/example/ts_rigid/rbdAdapter.yaml
@@ -3,7 +3,7 @@
 # ------------------------------------------------------------
 settings:
   monitor:
-    active: true
+    active: false
   solver:
     type: RBD
     name: rbd_solver
